--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ jmix.ui.login-screen-id = LoginScreen
 jmix.ui.main-screen-id = MainScreen
 jmix.ui.menu-config = com/company/cssjmixtutorial/menu.xml
 jmix.ui.composite-menu = true
+jmix.ui.default-screen-id = HomeScreen
 
 jmix.core.available-locales = en
 
@@ -22,3 +23,6 @@ logging.level.io.jmix.core.AccessLogger = debug
 
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
+jmix.ui.theme.name=cpf
+jmix.ui.theme-config=com/company/cssjmixtutorial/theme/cpf-theme.properties
+jmix.ui.theme.sizes = small
