--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ jmix.ui.login-screen-id = LoginScreen
 jmix.ui.main-screen-id = MainScreen
 jmix.ui.menu-config = com/company/cssjmixtutorial/menu.xml
 jmix.ui.composite-menu = true
-jmix.ui.default-screen-id = HomeScreen
+jmix.ui.default-screen-id = ProductScreen
+jmix.ui.app-window-mode=SINGLE
 
 jmix.core.available-locales = en
 
