--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-main.datasource.url = jdbc:hsqldb:file:.jmix/hsqldb/cssjmixtutorial
-main.datasource.username = sa
-main.datasource.password =
+main.datasource.url = jdbc:postgresql://localhost/cssjmixtutorial
+main.datasource.username = postgres
+main.datasource.password =password
 
 jmix.ui.login-screen-id = LoginScreen
 jmix.ui.main-screen-id = MainScreen
